--- a/docs/styles.css
+++ b/docs/styles.css
@@ -92,7 +92,7 @@ h1.title{
 .card {
   border-radius: 16px;
   overflow: hidden;
-  box-shadow: 0 4px 8px #9c55f1; 
+  box-shadow: #9c55f1 0px 3px 8px;
   transition: transform 0.2s ease;
 }
 
@@ -167,7 +167,7 @@ h1.title{
   display: block;
   width: 100%;
   height: auto;
-  box-shadow: 0 2px 4px ivory; 
+  box-shadow: ivory 0px 1.5px 4px; 
 }
 
 .card {
@@ -193,7 +193,7 @@ h1.title{
   display: block;
   width: 100%;
   height: auto;
-  box-shadow: 0 2px 4px ivory; 
+  box-shadow: ivory 0px 1.5px 4px; 
 }
 .card h3 {
   font-size: 1.05rem;
@@ -409,7 +409,7 @@ button[type="submit"]:hover {
   flex-direction: column;
   gap: 20px;
   padding: 20px;
-  box-shadow: 0 4px 8px #9c55f1; 
+  box-shadow: #9c55f1 0px 3px 8px;
 
   border-radius: 12px;
   background: var(--color-card-bg);
@@ -427,7 +427,7 @@ button[type="submit"]:hover {
   padding: 15px;
   color: var(--color-border);
   border: 1px solid ivory;
-  box-shadow: 0 4px 8px #9c55f1; 
+  box-shadow: #9c55f1 0px 3px 8px;
   background: transparent;
 
 }
@@ -474,7 +474,7 @@ button[type="submit"]:hover {
 /* Education Card */
 .education-card {
   border: 1px solid ivory;
-  box-shadow: 0 4px 8px #9c55f1; 
+  box-shadow: #9c55f1 0px 3px 8px;
   border-radius: 8px;
   padding: 15px;
   background: var(--color-input-bg);
@@ -750,7 +750,7 @@ box-shadow: none !important;
   align-items: center;
   height: 100%;
   border: 1px solid ivory;
-  box-shadow: 0 4px 8px #9c55f1; }
+  box-shadow: #9c55f1 0px 3px 8px;}
 
 .project-card:hover {
   transform: scale(1.02);
@@ -765,7 +765,7 @@ box-shadow: none !important;
   padding: 4px;
   background-color: var(--color-background);
   display: block;
-  box-shadow: 0 2px 4px ivory; 
+  box-shadow: ivory 0px 1.5px 4px; 
 }
 
 .project-card h3{
@@ -858,4 +858,8 @@ box-shadow: none !important;
   border: 1px solid #1a1b2f !important;
   border-radius: 6px;
   padding: 4px 8px;
+}
+
+body > div:nth-of-type(2) > main > section:nth-of-type(1) > div > p > img {
+  box-shadow: #9c55f1 0px 3px 8px;
 }
